<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".Acerca">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="248dp"
        android:layout_height="245dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView2"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="254dp"
        android:text="@string/autores"
        android:textColor="@color/colorLetras" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txt1"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="195dp"
        android:layout_marginLeft="195dp"
        android:layout_marginBottom="2dp"
        android:text="@string/franco"
        android:textColor="@color/colorLetras" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView4"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-17dp"
        android:layout_marginBottom="228dp"
        android:text="@string/cristian"
        android:textColor="@color/colorLetras" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView2"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="193dp"
        android:text="@string/nombreappn"
        android:textColor="@color/colorLetras" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView4"
        android:layout_alignTop="@+id/textView6"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:text="@string/nombreapp"
        android:textColor="@color/colorLetras" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView2"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="156dp"
        android:text="@string/fecha"
        android:textColor="@color/colorLetras" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView4"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="154dp"
        android:text="@string/lanzamiento"
        android:textColor="@color/colorLetras" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView2"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="112dp"
        android:text="@string/version"
        android:textColor="@color/colorLetras" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView10"
        android:layout_alignEnd="@+id/textView9"
        android:layout_marginTop="-2dp"
        android:layout_marginEnd="55dp"
        android:text="@string/uno"
        android:textColor="@color/colorLetras" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txt1"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-14dp"
        android:layout_marginBottom="76dp"
        android:text="@string/insti"
        android:textColor="@color/colorLetras" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView9"
        android:layout_alignBottom="@+id/textView12"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="2dp"
        android:text="@string/inacap"
        android:textColor="@color/colorLetras" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView6"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="40dp"
        android:text="@string/nomProfe"
        android:textColor="@color/colorLetras" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView7"
        android:layout_alignTop="@+id/textView14"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/profesor"
        android:textColor="@color/colorLetras" />


</RelativeLayout>