<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".Menu">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="206dp"
        android:layout_height="204dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        tools:ignore="VectorDrawableCompat" />

    <Button
        android:id="@+id/btnRegistro"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="182dp"
        android:layout_marginBottom="281dp"
        android:background="@drawable/estilo_boton_inicio"
        android:text="@string/registro"
        android:textColor="@color/colorLetras" />

    <Button
        android:id="@+id/btnListar"
        android:layout_alignParentBottom="true"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="214dp"
        android:textColor="@color/colorLetras"
        android:background="@drawable/estilo_boton_inicio"
        android:text="@string/listar" />

    <Button
        android:id="@+id/btnClima"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="150dp"
        android:textColor="@color/colorLetras"
        android:background="@drawable/estilo_boton_inicio"
        android:text="@string/clima" />

    <Button
        android:id="@+id/btnAcerca"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="84dp"
        android:textColor="@color/colorLetras"
        android:background="@drawable/estilo_boton_inicio"
        android:text="@string/acerca" />

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/estilo_boton_inicio"
        android:textColor="@color/colorLetras"
        android:text="@string/Salir" />


</RelativeLayout>