<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".Modificar">

    <EditText
        android:id="@+id/txtmNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="124dp"
        android:layout_marginLeft="124dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/colorLetras"
        android:textColorHint="@color/colorLetras"
        android:drawableLeft="@drawable/ic_action_user"
        android:hint="@string/hint_nombre"
        android:ems="10"
        android:inputType="textPersonName"
        />

    <EditText
        android:id="@+id/txtMApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/ic_action_user"
        android:layout_marginTop="124dp"
        android:hint="@string/apellido"
        android:textColor="@color/colorLetras"
        android:textColorHint="@color/colorLetras"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtMemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtmNombre"
        android:layout_alignParentTop="true"
        android:layout_marginTop="220dp"
        android:drawableLeft="@drawable/ic_action_mail"
        android:ems="10"
        android:hint="@string/correo"
        android:textColorHint="@color/colorLetras"
        android:inputType="textPersonName"
        android:textColor="@color/colorLetras"
        android:layout_alignLeft="@+id/txtmNombre"
        tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/btnMmodifica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="74dp"
        android:layout_marginLeft="74dp"
        android:textColor="@color/colorLetras"
        android:text="@string/modifica"
        android:background="@drawable/estilo_botones"
        android:layout_marginBottom="149dp"
        />

    <Button
        android:id="@+id/btnMElimina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnMmodifica"
        android:layout_alignParentEnd="true"
        android:background="@drawable/estilo_botones"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        android:textColor="@color/colorLetras"
        android:text="@string/elimina" />
</RelativeLayout>